# Kotoku

./: .gitignore  kotoku_django_repo_blueprint.md
kotoku-backend/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
kotoku-backend/.github/: PULL_REQUEST_TEMPLATE.md
kotoku-backend/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
kotoku-backend/.github/workflows/: ci.yml
kotoku-backend/apps/: __init__.py
kotoku-backend/apps/accounts/: admin.py  models.py  permissions.py  selectors.py  services.py
kotoku-backend/apps/agreements/: __init__.py  admin.py  models.py  selectors.py  services.py
kotoku-backend/apps/audit/: admin.py  models.py  selectors.py  services.py
kotoku-backend/apps/auth/: apps.py  services.py
kotoku-backend/apps/consent/: admin.py  models.py  selectors.py  services.py  tasks.py
kotoku-backend/apps/disputes/: __init__.py  admin.py  models.py  selectors.py  services.py
kotoku-backend/apps/evidence/: admin.py  hashing.py  models.py  selectors.py  services.py  storage.py  tasks.py
kotoku-backend/apps/identity/: admin.py  models.py  selectors.py  services.py  validators.py
kotoku-backend/apps/notifications/: admin.py  models.py  tasks.py  (+1 more)
kotoku-backend/common/: constants.py  exception_handler.py  exceptions.py  logging.py  mixins.py  permissions.py  responses.py  types.py  validators.py
kotoku-backend/config/: celery.py  urls.py
kotoku-backend/scripts/: bootstrap.sh  run_dev.sh  seed_demo_data.py  wait_for_db.sh
kotoku-backend/tests/: conftest.py
(+130 files in other folders)
